package eapli.ecourse.questionmanagement.domain;

public enum QuestionType {
  FORMATIVE, REGULAR
}
