@startuml DM-QUESTION
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0
hide empty attributes
hide empty methods
skinparam classBackgroundColor beige
skinparam ArrowColor #222222


package "<<agregate>> Question" {
  abstract Question

  class QuestionBody
  class CorrectAnswer

  abstract Question
  entity Matching
  entity MultipleChoice
  entity ShortAnswer
  entity Numerical
  entity MissingWords
  entity TrueFalse

  class QuestionType
  class Feedback
}

package "<<agregate>> ExamAnswer" {
  entity ExamAnswer
  entity AnswerToQuestion
}

abstract Question <<entity>> <<root>> {}
entity ExamAnswer <<entity>> <<root>> {}
entity AnswerToQuestion <<entity>> {}

ExamAnswer *-- "1..*" AnswerToQuestion

package "<<agregate>> Exam" {
  entity Exam
  entity Section
  entity SectionQuestion
}

package "<<agregate>> Course" {
  entity Course
}

entity Course <<entity>> <<root>> {}

entity Exam <<entity>> <<root>> {}
entity Section <<entity>> {}
entity SectionQuestion <<entity>> {}

Exam *-- "1..*" Section
SectionQuestion --> "1..*" Question

class QuestionBody <<(V,#FF8B40) value object>> {}
class CorrectAnswer <<(V,#FF8B40) value object>> {}
class QuestionType <<(V,#FF8B40) value object>> {}
class Feedback <<(V,#FF8B40) value object>> {}

note left of QuestionType
  REGULAR
  FORMATIVE
end note

Question *- QuestionBody
Question *-- CorrectAnswer
Question --> "1" QuestionType :has

Question <|--- Matching
Question <|--- MultipleChoice
Question <|--- ShortAnswer
Question <|--- Numerical
Question <|--- MissingWords
Question <|--- TrueFalse

Question --> "1" Course : has

entity Matching <<entity>> {}
entity MultipleChoice <<entity>> {}
entity ShortAnswer <<entity>> {}
entity Numerical <<entity>> {}
entity MissingWords <<entity>> {}
entity TrueFalse <<entity>> {}

AnswerToQuestion --> "1" Exam : is for
Question --> "0..*" Feedback
Section *-- "1..*" SectionQuestion

@enduml
